[tool.poetry]
name = "no-zero-days"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.3"
django = "^2.2.5"
django-widget-tweaks = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
